fix text mistakes and change one section into a div

--- a/advice.html
+++ b/advice.html
@@ -25,7 +25,7 @@
     </header>
 
     <!-- popup get help window -->
-    <section id="open-help-window">
+    <div id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
                 <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
@@ -45,7 +45,7 @@
                 <input type="submit" value="Send">
             </form>
         </div>
-    </section>
+    </div>
     <!-- success message -->
     <div id="success-message">
         <div id="got-message">
@@ -80,7 +80,7 @@
             <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and
                 <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when
                 starting.
-                If you are a more experienced climber, please write to us on the <a href="#"><em>Get Help</em></a> tab
+                If you are a more experienced climber or couldn't find what you needed, please write to us on the <a href="#"><em>Get Help</em></a> tab
                 and we will guide you from your current needs.
             </p>
             <section>
