--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <!-- popup get help window -->
-    <section id="open-help-window">
+    <div id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
                 <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
@@ -45,7 +45,7 @@
                 <input type="submit" value="Send">
             </form>
         </div>
-    </section>
+    </div>
     <!-- success message -->
     <div id="success-message">
         <div id="got-message">
@@ -67,12 +67,11 @@
             <p>
                 In the 2020 Tokya Olympic Games, sport-climbing had its debut with 3 different categories: boulder, lead
                 and speed climbing.
-                Athletes had to complete in all three categories, which changed in the 2024 Paris Olympics Games, when
-                speed climb
-                got separeted from the othe two modalities.
+                Athletes had to compete in all three categories, which changed in the 2024 Paris Olympics Games, when
+                speed climb got separeted from the other two modalities.
             </p>
             <p>
-                There are many diffenret grades for the climbing routes, but the most common ones in Europe are
+                There are many different grades for the climbing routes, but the most common ones in Europe are
                 French font-grade and American V system.
             </p>
         </section>
