add link to preload image for better performance

--- a/advice.html
+++ b/advice.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preload" href="assets/images/hanging-shoes.webp" as="image">
     <meta name="description" content="Climbing Rox. Climbing content for all kinds of climbers">
     <meta name="keywords" content="climbing, boulder, toprope, lead climbing, sports, exercise">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons8-mountain-16.png">
