add two HTML files for each article and change the advice section to show article choices

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <header id="cover-home">
+    <header class="cover-home">
         <h1>Climbing Rox</h1>
         <h2>The ultimate climbing guide</h2>
-        <nav id="navbar">
+        <nav class="navbar">
             <a href="advice.html">Advice</a>
             <a href="#open-help-window">Get Help</a>
             <a href="#footer">Follow Us</a>
@@ -26,7 +26,7 @@
     </header>
 
     <!-- popup get help window -->
-    <div id="open-help-window">
+    <aside id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
                 <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
@@ -46,16 +46,16 @@
                 <input type="submit" value="Send">
             </form>
         </div>
-    </div>
+    </aside>
     <!-- success message -->
-    <div id="success-message">
+    <aside id="success-message">
         <div id="got-message">
             <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
             <br>
-            <p>We got your question!</p>
+            <p>We got your question and will reply within a week.</p>
             <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i> Back</a>
         </div>
-    </div>
+    </aside>
 
     <main>
         <!-- presentation section -->
