--- a/advice.html
+++ b/advice.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <header id="cover-advice">
+    <header class="cover-advice">
         <h1>Guide</h1>
         <h2>Hang in there, <br> we got you!</h2>
-        <nav id="navbar">
+        <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="#open-help-window">Get Help</a>
             <a href="#footer">Follow Us</a>
@@ -26,7 +26,7 @@
     </header>
 
     <!-- popup get help window -->
-    <div id="open-help-window">
+    <aside id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
                 <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
@@ -46,157 +46,46 @@
                 <input type="submit" value="Send">
             </form>
         </div>
-    </div>
+    </aside>
     <!-- success message -->
-    <div id="success-message">
+    <aside id="success-message">
         <div id="got-message">
             <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
             <br>
-            <p>We got your question!</p>
+            <p>We got your question and will reply within a week.</p>
             <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i> Back</a>
         </div>
-    </div>
+    </aside>
     <main>
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
-        <!-- advice section -->
-        <section class="main-content">
-            <h2>Introduction</h2>
-            <p>In here you will find all the information you need to make wise decision
-                in your climbing journey.
-                We want to cover from how to choose equipment to best places on mother
-                Earth to go on a climbing trip.
-            </p>
-            <p>We will post continuosly so keep an eye open to new articles or
-                listen to our podcast, everything we say there we bring up comes here also.
-            </p>
+        
+        <!-- article selection -->
+        <h2>Articles</h2>
+        <p>Here you can browse through everything we have already posted. Have fun, and if 
+            there is something that you didn't find and really want us to write about, please
+            write to us on <a href="#"><em>Get Help</em></a>.
+        </p>
+
+        <section class="article-selection">
+            <a href="climb-types.html">
+                <img src="assets/images/girl-bouldering.webp" alt="A girl climbing a boulder" class="clickable-img">
+                <div class="text-aligned">What are the sport climb types</div>
+            </a>
+            
+            <a href="shoes.html"> 
+                <img src="assets/images/holding-shoes.webp" alt="A person holding their shoes" class="clickable-img">
+                <div class="text-aligned">How to Choose Climbing Shoes</div>
+            </a>
         </section>
-        <article class="main-content">
-            <h2>How to choose climbing shoes?</h2>
-            <p> When first sarting climbing, buying the shoes is the first thing you will
-                do, probably, and then realizing how many different shoes there are can be
-                overwhelming. The prices vary quite much, but the general agreement is that they
-                are not cheap, so you want to make a good decision from the beginning. Don't worry,
-                we got you covered. In this article we are going to explain the main differences
-                between the climbing shoes and guide you to an educated choice of shoes.</p>
-            <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and
-                <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when
-                starting.
-                If you are a more experienced climber or couldn't find what you needed, please write to us on the <a href="#"><em>Get Help</em></a> tab
-                and we will guide you from your current needs.
-            </p>
-            <section>
-                <div class="features">
-                    <img src="assets/images/hanging-shoes.webp"
-                        alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
-                    <h3 id="shoe-feature">Shoe features </h3>
-                    <div>
-                        <h4>Shoe Material</h4>
-                        <p>There aren't many to choose from and this feature regards stretching of the shoe.
-                            <strong>Unlined leather</strong> is the one that stretches the most and <strong>sintetic
-                                material</strong> stretches
-                            the least. In between there is <strong>lined leather</strong>.
-                        </p>
-                        <h4>Shoe closure</h4>
-                        <p>For these, there are also 3 options available: lace-up, strap and slip-on.
-                            The names are pretty descriptive but what they offer vary widely. <strong>Lace-up</strong>
-                            offers the most versatility as you can adjust how tight or loose it sits on your feet. With
-                            that in
-                            mind, it takes forever to pur on/take off. <strong>Strap</strong>(the most common one) is
-                            all
-                            about easy on and off feature, with much less feet adjustment. <strong>Slip-on</strong> are
-                            like very very tight socks and are great for sensibility and building stronger feet,
-                            as they don't have stiff sole and mid-soles.
-                        </p>
-                    </div>
-                </div>
-                <div>
-                    <h3 id="shoe-shape">Shoe shape</h3>
-                    <div class="shapes">
-                        <h4>Neutral Shape</h4>
-                        <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
-                            class="shoes-image" id="neutral">
-                        <img src="assets/images/neutral-2.webp" alt="Climbing shoes on a rock"
-                            class="shoes-image img-2">
-                        <p>
-                            The most confortable climbing shoe you will find. Your toes will sit flat
-                            inside, so you can wear them for longer periods of time without having to
-                            take them out. They usually have stiffer midsoles which provide great support
-                            but less sensitivity. Safe to say that it is the most durable one because of
-                            the extra rubber.
-                        </p>
-                    </div>
-                    <div class="shapes">
-                        <h4 id="moderate-heading">Moderate Shape</h4>
-                        <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
-                            class="shoes-image" id="moderate">
-                        <img src="assets/images/moderate-2.webp" alt="feet of a person climbing"
-                            class="shoes-image img-2">
-                        <p>
-                            From here we start to have a downward curvature that puts your feet into a stronger
-                            position for harder routes. Usually more sensitive giving you more control of your feet.
-                            The curvy shape offers a lot but also takes a bit of the confort. Little less durable as
-                            the rubber gets thinner for more sensibility.
-                        </p>
-                    </div>
-                    <div class="shapes">
-                        <h4>Aggressive Shape</h4>
-                        <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
-                            class="shoes-image" id="aggressive">
-                        <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing"
-                            class="shoes-image img-2">
-                        <p>
-                            The most curved climbing shoe, that gives you power in your toes and your heels.
-                            Excellent for small foot holds and overhang climbs as gives the most sensibility
-                            of all. As you can imagine, is the most unconfortable one as makes your feet turn
-                            in non-natural ways. It wears out the faster from all options also.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <h3>How to Decide</h3>
-                    <p>
-                        <em>"Great info guys, how do I choose then?"</em>
-                        <br>
-                        We will list a couple of things that you have to answer based on your own
-                        situation, and with the information we gave, you should be able to do choose
-                        a proper shoe that will meet your needs. And if you can't, remember we are here
-                        for you in <a href="#"><em>Get Help</em></a>.
-                    </p>
-                    <div>
-                        <ul id="questions">
-                            <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or
-                                outdoor? Overhang or slabs?</li>
-                            <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
-                            <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
-                            <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section id="conclusion">
-                <h3>Conclusion</h3>
-                <p>
-                    As much as we would like to give you a definite answer, we can't. Sorry about that.
-                    The perfect shoe will be a very individual choice and there is no such thing as
-                    one-fit-all in this case.
-                </p>
-                <p>
-                    We just hope we helped you with the information you needed to make this decision and
-                    that you find the perfect match for you (the climbing god knows how hard it is to simply find
-                    a pair of shoes in your size). <strong>See you out there!</strong>
-                </p>
-            </section>
-        </article>
+
+        <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
     </main>
+
     <footer id="footer">
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
     </footer>
-
-    <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
