add content to climb-types.html file

--- a/advice.html
+++ b/advice.html
@@ -58,14 +58,22 @@
     <main>
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
         
-        <!-- article selection -->
+        <!-- intro article selection -->
         <section class="main-content">
             <h2>Articles</h2>
-            <p>Here you can browse through everything we have already posted. Have fun, and if 
-                there is something that you didn't find and really want us to write about, please
+            <p>In here you will find all the information you need to make wise decision
+                in your climbing journey.
+                We want to cover from how to choose equipment to best places on mother
+                Earth to go on a climbing trip.
+            </p>
+            <p>We will post continuosly so keep an eye open to new articles or
+                listen to our podcast, everything we say there we bring up comes here also.
+            </p>
+            <p> Have fun, and if there is something that you didn't find and really want us to write about, please
                 write to us on <a href="#"><em>Get Help</em></a>.
             </p>
 
+            <!-- articles available -->
             <section class="article-selection">
                 <a href="climb-types.html">
                     <img src="assets/images/girl-bouldering.webp" alt="A girl climbing a boulder" class="clickable-img">
