--- a/climb-types.html
+++ b/climb-types.html
@@ -20,6 +20,7 @@
         <h2>Hang in there, <br> we got you!</h2>
         <nav class="navbar">
             <a href="index.html">Home</a>
+            <a href="advice.html">Advice</a>
             <a href="#open-help-window">Get Help</a>
             <a href="#footer">Follow Us</a>
         </nav>
@@ -58,10 +59,76 @@
     </aside>
     <main>
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
+
         <!-- article selection -->
+        <article class="main-content">
+            <h2>Understanding the Different Types of Sport Climbing</h2>
+            <p>
+                Sport climbing is a dynamic and accessible form of rock climbing where climbers ascend routes equipped
+                with permanent bolts and anchors. Unlike traditional climbing, which requires placing protection, sport
+                climbing allows
+                climbers to focus on technique and movement.
+            </p>
+            <p>
+                There are three main kinds of sport climbing: <a href="#single-pitch"><em>single-pitch</em></a> and
+                <a href="#multi-pitch"><em>multi-pitch</em></a> and <a href="#boulder"><em>boulder</em></a> and they vary
+                quite
+                much. So read through it and find out which one (if not all) is for you.
+            </p>
+            <section>
+                <div>
+                    <h3 id="single-pitch">Single-pitch Climbing</h3>
+                    <img src="" alt="">
+                    <p>
+                        Single-pitch routes are the most common in sport climbing and are often found at climbing gyms
+                        and outdoor crags. These
+                        routes are usually under 30 meters and can be completed in one go. Climbers clip quickdraws into
+                        pre-placed bolts as
+                        they ascend, leading to a set of anchors at the top. Single-pitch climbs are ideal for climbers
+                        of all levels, from
+                        beginners to intermediates.
+                    </p>
+                </div>
+                <div>
+                    <h3 id="multi-pitch">Multi-pitch Climbing</h3>
+                    <img src="" alt="">
+                    <p>
+                        Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple climbing
+                        segments (pitches), each
+                        ending at a belay station. Climbers alternate between leading and following, using these
+                        stations to rest or swap roles.
+                        Multi-pitch routes often lead to greater heights and offer climbers more of an adventure than
+                        single-pitch routes.
+                    </p>
+                </div>
+                <div>
+                    <h3 id="boulder">Boulder</h3>
+                    <img src="" alt="">
+                    <p>
+                        Some sport routes feature short, powerful sequences known as cruxes. These sections require
+                        climbers to make difficult,
+                        bouldering-style moves in quick succession. Bouldery sport climbs are great for those who enjoy
+                        mixing endurance with
+                        bursts of strength and problem-solving.
+                    </p>
+                </div>
+            </section>
+            <h3>Conclusion</h3>
+            <p>
+                Whether you're just starting out or looking to push your limits, sport climbing offers a variety of
+                challenges to suit
+                different skill levels. Each type of climb brings its own excitement, making it a diverse and rewarding
+                sport.
+            </p>
+        </article>
+    </main>
+    <footer id="footer">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+    </footer>
 
-
-        <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
