--- a/shoes.html
+++ b/shoes.html
@@ -59,18 +59,8 @@
     </aside>
     <main>
         <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
-        <!-- advice section -->
-        <section class="main-content">
-            <h2>Introduction</h2>
-            <p>In here you will find all the information you need to make wise decision
-                in your climbing journey.
-                We want to cover from how to choose equipment to best places on mother
-                Earth to go on a climbing trip.
-            </p>
-            <p>We will post continuosly so keep an eye open to new articles or
-                listen to our podcast, everything we say there we bring up comes here also.
-            </p>
-        </section>
+
+        <!-- article -->
         <article class="main-content">
             <h2>How to choose climbing shoes?</h2>
             <p> When first sarting climbing, buying the shoes is the first thing you will
@@ -82,7 +72,8 @@
             <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and
                 <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when
                 starting.
-                If you are a more experienced climber or couldn't find what you needed, please write to us on the <a href="#"><em>Get Help</em></a> tab
+                If you are a more experienced climber or couldn't find what you needed, please write to us on the <a
+                    href="#"><em>Get Help</em></a> tab
                 and we will guide you from your current needs.
             </p>
             <section>
@@ -155,40 +146,36 @@
                 </div>
             </section>
             <section>
+                <h3>How to Decide</h3>
+                <p>
+                    <em>"Great info guys, how do I choose then?"</em>
+                    <br>
+                    We will list a couple of things that you have to answer based on your own
+                    situation, and with the information we gave, you should be able to do choose
+                    a proper shoe that will meet your needs. And if you can't, remember we are here
+                    for you in <a href="#"><em>Get Help</em></a>.
+                </p>
                 <div>
-                    <h3>How to Decide</h3>
-                    <p>
-                        <em>"Great info guys, how do I choose then?"</em>
-                        <br>
-                        We will list a couple of things that you have to answer based on your own
-                        situation, and with the information we gave, you should be able to do choose
-                        a proper shoe that will meet your needs. And if you can't, remember we are here
-                        for you in <a href="#"><em>Get Help</em></a>.
-                    </p>
-                    <div>
-                        <ul id="questions">
-                            <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or
-                                outdoor? Overhang or slabs?</li>
-                            <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
-                            <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
-                            <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
-                        </ul>
-                    </div>
+                    <ul id="questions">
+                        <li><i class="fa-solid fa-mountain"></i> What kind of routes are you climbing? Indoor or
+                            outdoor? Overhang or slabs?</li>
+                        <li><i class="fa-solid fa-medal"></i> How experienced are you?</li>
+                        <li><i class="fa-solid fa-bullseye"></i> Have you felt the need for more precision?</li>
+                        <li><i class="fa-solid fa-socks"></i> How strong are your feet?</li>
+                    </ul>
                 </div>
             </section>
-            <section id="conclusion">
-                <h3>Conclusion</h3>
-                <p>
-                    As much as we would like to give you a definite answer, we can't. Sorry about that.
-                    The perfect shoe will be a very individual choice and there is no such thing as
-                    one-fit-all in this case.
-                </p>
-                <p>
-                    We just hope we helped you with the information you needed to make this decision and
-                    that you find the perfect match for you (the climbing god knows how hard it is to simply find
-                    a pair of shoes in your size). <strong>See you out there!</strong>
-                </p>
-            </section>
+            <h3>Conclusion</h3>
+            <p>
+                As much as we would like to give you a definite answer, we can't. Sorry about that.
+                The perfect shoe will be a very individual choice and there is no such thing as
+                one-fit-all in this case.
+            </p>
+            <p>
+                We just hope we helped you with the information you needed to make this decision and
+                that you find the perfect match for you (the climbing god knows how hard it is to simply find
+                a pair of shoes in your size). <strong>See you out there!</strong>
+            </p>
         </article>
     </main>
     <footer id="footer">
