add images to climbing types article and style them accordingly

--- a/climb-types.html
+++ b/climb-types.html
@@ -78,7 +78,7 @@
             <section>
                 <div>
                     <h3 id="single-pitch">Single-pitch Climbing</h3>
-                    <img src="" alt="">
+                    <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope" class="climb-img">
                     <p>
                         Single-pitch routes are the most common in sport climbing and are often found at climbing gyms
                         and outdoor crags. These
@@ -91,7 +91,7 @@
                 </div>
                 <div>
                     <h3 id="multi-pitch">Multi-pitch Climbing</h3>
-                    <img src="" alt="">
+                    <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope" class="climb-img">
                     <p>
                         Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple climbing
                         segments (pitches), each
@@ -103,7 +103,7 @@
                 </div>
                 <div>
                     <h3 id="boulder">Boulder</h3>
-                    <img src="" alt="">
+                    <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress" class="climb-img">
                     <p>
                         Some sport routes feature short, powerful sequences known as cruxes. These sections require
                         climbers to make difficult,
