--- a/climb-types.html
+++ b/climb-types.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-tablet.css">
+    <link rel="stylesheet" href="assets/css/style-desktop.css">
     <link rel="preload" href="assets/images/hanging-shoes.webp" fetchpriority="high" as="image" type="image/webp">
     <meta name="description" content="Climbing Rox. Climbing content for all kinds of climbers">
     <meta name="keywords" content="climbing, boulder, toprope, lead climbing, sports, exercise">
