atyle advice section for tablet size screen

--- a/advice.html
+++ b/advice.html
@@ -79,7 +79,7 @@
             <section class="article-selection">
                 <a href="climb-types.html">
                     <img src="assets/images/girl-bouldering.webp" alt="A girl climbing a boulder" class="clickable-img">
-                    <div class="text-aligned">What are the types of sport climbing?</div>
+                    <div class="text-aligned">What are the types of Sport Climbing?</div>
                 </a>
                 
                 <a href="shoes.html"> 
