--- a/advice.html
+++ b/advice.html
@@ -79,12 +79,19 @@
             <section class="article-selection">
                 <a href="climb-types.html">
                     <img src="assets/images/girl-bouldering.webp" alt="A girl climbing a boulder" class="clickable-img">
-                    <div class="text-aligned">What are the types of Sport Climbing?</div>
+                    <div class="text-aligned">
+                        <h3>What are the types of Sport Climbing?</h3>
+                        <p>Fid out what is the best kind for you!</p>
+                    </div>
+                    
                 </a>
                 
                 <a href="shoes.html"> 
                     <img src="assets/images/holding-shoes.webp" alt="A person holding their shoes" class="clickable-img">
-                    <div class="text-aligned">How to Choose Climbing Shoes</div>
+                    <div class="text-aligned">
+                        <h3>How to Choose Climbing Shoes</h3>
+                        <p>Find out the perfect fit for you!</p>
+                    </div>
                 </a>
             </section>
         </section>
