style advice section further in tablet size screen

--- a/advice.html
+++ b/advice.html
@@ -81,7 +81,7 @@
                     <img src="assets/images/girl-bouldering.webp" alt="A girl climbing a boulder" class="clickable-img">
                     <div class="text-aligned">
                         <h3>What are the types of Sport Climbing?</h3>
-                        <p>Fid out what is the best kind for you!</p>
+                        <p>Find out what is the best kind for you!</p>
                     </div>
                     
                 </a>
@@ -89,7 +89,7 @@
                 <a href="shoes.html"> 
                     <img src="assets/images/holding-shoes.webp" alt="A person holding their shoes" class="clickable-img">
                     <div class="text-aligned">
-                        <h3>How to Choose Climbing Shoes</h3>
+                        <h3>How to Choose Climbing Shoes?</h3>
                         <p>Find out the perfect fit for you!</p>
                     </div>
                 </a>
