fix responsiveness for images in choosing shoes article for mobile

--- a/climb-types.html
+++ b/climb-types.html
@@ -77,10 +77,10 @@
                 quite
                 much. So read through it and find out which one (if not all) is for you.
             </p>
-            <section>
+            <section class="article-style">
                 <div>
                     <h3 id="single-pitch">Single-pitch Climbing</h3>
-                    <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope" class="climb-img">
+                    <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope" class="article-img content-image">
                     <p>
                         Single-pitch routes are the most common in sport climbing and are often found at climbing gyms
                         and outdoor crags. These
@@ -93,7 +93,7 @@
                 </div>
                 <div>
                     <h3 id="multi-pitch">Multi-pitch Climbing</h3>
-                    <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope" class="climb-img">
+                    <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope" class="article-img content-image">
                     <p>
                         Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple climbing
                         segments (pitches), each
@@ -105,7 +105,7 @@
                 </div>
                 <div>
                     <h3 id="boulder">Boulder</h3>
-                    <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress" class="climb-img">
+                    <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress" class="article-img content-image">
                     <p>
                         Some sport routes feature short, powerful sequences known as cruxes. These sections require
                         climbers to make difficult,
