--- a/shoes.html
+++ b/shoes.html
@@ -79,7 +79,7 @@
                 and we will guide you from your current needs.
             </p>
             <section>
-                <div class="features">
+                <div class="article-style">
                     <img src="assets/images/hanging-shoes.webp"
                         alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
                     <h3 id="shoe-feature">Shoe features </h3>
@@ -108,9 +108,9 @@
                     <div class="shapes">
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
-                            class="shoes-image" id="neutral">
-                        <img src="assets/images/neutral-2.webp" alt="Climbing shoes on a rock"
-                            class="shoes-image img-2">
+                            class="article-img content-image" id="neutral">
+                        <img src="assets/images/neutral-2.webp" alt="Climbing content on a rock"
+                            class="content-image img-2">
                         <p>
                             The most confortable climbing shoe you will find. Your toes will sit flat
                             inside, so you can wear them for longer periods of time without having to
@@ -122,9 +122,9 @@
                     <div class="shapes">
                         <h4 id="moderate-heading">Moderate Shape</h4>
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
-                            class="shoes-image" id="moderate">
+                            class="article-img content-image" id="moderate">
                         <img src="assets/images/moderate-2.webp" alt="feet of a person climbing"
-                            class="shoes-image img-2">
+                            class="content-image img-2">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
@@ -135,9 +135,9 @@
                     <div class="shapes">
                         <h4>Aggressive Shape</h4>
                         <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
-                            class="shoes-image" id="aggressive">
+                            class="article-img content-image" id="aggressive">
                         <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing"
-                            class="shoes-image img-2">
+                            class="content-image img-2">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
                             Excellent for small foot holds and overhang climbs as gives the most sensibility
