remove unecessary style properties and style climbing types articles the same as choosing shoes article

--- a/shoes.html
+++ b/shoes.html
@@ -79,7 +79,7 @@
                 and we will guide you from your current needs.
             </p>
             <section>
-                <div class="article-style">
+                <div>
                     <img src="assets/images/hanging-shoes.webp"
                         alt="Two pairs of climbing shoes hanging on a tree by a climbing rope" id="shoe-feat">
                     <h3 id="shoe-feature">Shoe features </h3>
