add extra content line to boulder text

--- a/climb-types.html
+++ b/climb-types.html
@@ -73,7 +73,8 @@
             </p>
             <p>
                 There are three main kinds of sport climbing: <a href="#single-pitch"><em>single-pitch</em></a> and
-                <a href="#multi-pitch"><em>multi-pitch</em></a> and <a href="#boulder"><em>boulder</em></a> and they vary
+                <a href="#multi-pitch"><em>multi-pitch</em></a> and <a href="#boulder"><em>boulder</em></a> and they
+                vary
                 quite
                 much. So read through it and find out which one (if not all) is for you.
             </p>
@@ -81,13 +82,17 @@
                 <div class="styles">
                     <h3 id="single-pitch">Single-pitch Climbing</h3>
                     <div>
-                        <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope" class="article-img content-image" id="single-pitch">
+                        <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope"
+                            class="article-img content-image" id="single-pitch">
                         <p>
-                            Single-pitch routes are the most common in sport climbing and are often found at climbing gyms
+                            Single-pitch routes are the most common in sport climbing and are often found at climbing
+                            gyms
                             and outdoor crags. These
-                            routes are usually under 30 meters and can be completed in one go. Climbers clip quickdraws into
+                            routes are usually under 30 meters and can be completed in one go. Climbers clip quickdraws
+                            into
                             pre-placed bolts as
-                            they ascend, leading to a set of anchors at the top. Single-pitch climbs are ideal for climbers
+                            they ascend, leading to a set of anchors at the top. Single-pitch climbs are ideal for
+                            climbers
                             of all levels, from
                             beginners to intermediates.
                         </p>
@@ -96,13 +101,16 @@
                 <div class="styles">
                     <h3 id="multi-pitch">Multi-pitch Climbing</h3>
                     <div>
-                        <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope" class="article-img content-image" id="multi-pitch">
+                        <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope"
+                            class="article-img content-image" id="multi-pitch">
                         <p>
-                            Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple climbing
+                            Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple
+                            climbing
                             segments (pitches), each
                             ending at a belay station. Climbers alternate between leading and following, using these
                             stations to rest or swap roles.
-                            Multi-pitch routes often lead to greater heights and offer climbers more of an adventure than
+                            Multi-pitch routes often lead to greater heights and offer climbers more of an adventure
+                            than
                             single-pitch routes.
                         </p>
                     </div>
@@ -110,24 +118,25 @@
                 <div class="styles">
                     <h3 id="boulder">Boulder</h3>
                     <div>
-                        <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress" class="article-img content-image" id="boulder">
+                        <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress"
+                            class="article-img content-image" id="boulder">
                         <p>
-                            Some sport routes feature short, powerful sequences known as cruxes. These sections require
-                            climbers to make difficult,
-                            bouldering-style moves in quick succession. Bouldery sport climbs are great for those who enjoy
-                            mixing endurance with
-                            bursts of strength and problem-solving.
+                            Climb with no rope and usually much lower (up to 4m high) walls/rocks. Some sport routes
+                            feature short, powerful sequences known as cruxes. These sections require climbers to make
+                            difficult,
+                            bouldering-style moves in quick succession. Bouldery sport climbs are great for those who
+                            enjoy mixing endurance with bursts of strength and problem-solving.
                         </p>
                     </div>
                 </div>
             </section>
-                <h3>Conclusion</h3>
-                <p>
-                    Whether you're just starting out or looking to push your limits, sport climbing offers a variety of
-                    challenges to suit
-                    different skill levels. Each type of climb brings its own excitement, making it a diverse and rewarding
-                    sport.
-                </p>
+            <h3>Conclusion</h3>
+            <p>
+                Whether you're just starting out or looking to push your limits, sport climbing offers a variety of
+                challenges to suit
+                different skill levels. Each type of climb brings its own excitement, making it a diverse and rewarding
+                sport.
+            </p>
         </article>
     </main>
     <footer id="footer">
