fix the second image not showing on larger screens

--- a/shoes.html
+++ b/shoes.html
@@ -102,14 +102,14 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div class="shoe-shape">
                     <h3 id="shoe-shape">Shoe shape</h3>
                     <div class="shapes">
                         <h4>Neutral Shape</h4>
                         <img src="assets/images/all-round-climbing_1.webp" alt="Neutral climbing shoes being velcro on"
                             class="article-img content-image" id="neutral">
                         <img src="assets/images/neutral-2.webp" alt="Climbing content on a rock"
-                            class="content-image img-2">
+                            class="content-image article-img img-2">
                         <p>
                             The most confortable climbing shoe you will find. Your toes will sit flat
                             inside, so you can wear them for longer periods of time without having to
@@ -123,7 +123,7 @@
                         <img src="assets/images/moderate-climbing.webp" alt="Moderate climbing shoes being put on"
                             class="article-img content-image" id="moderate">
                         <img src="assets/images/moderate-2.webp" alt="feet of a person climbing"
-                            class="content-image img-2">
+                            class="content-image article-img img-2">
                         <p>
                             From here we start to have a downward curvature that puts your feet into a stronger
                             position for harder routes. Usually more sensitive giving you more control of your feet.
@@ -136,7 +136,7 @@
                         <img src="assets/images/aggressive-climbing.webp" alt="Aggressive climbing shoes being put on"
                             class="article-img content-image" id="aggressive">
                         <img src="assets/images/aggressive-2.webp" alt="feet of a person climbing"
-                            class="content-image img-2">
+                            class="content-image article-img img-2">
                         <p>
                             The most curved climbing shoe, that gives you power in your toes and your heels.
                             Excellent for small foot holds and overhang climbs as gives the most sensibility
