--- a/climb-types.html
+++ b/climb-types.html
@@ -138,7 +138,7 @@
             </p>
         </article>
     </main>
-    <footer id="footer">
+    <footer class="footer">
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
