--- a/shoes.html
+++ b/shoes.html
@@ -55,7 +55,7 @@
             <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
             <br>
             <p>We got your question and will reply within a week.</p>
-            <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i> Back</a>
+            <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i>Back to Form</a>
         </div>
     </aside>
     <main>
@@ -179,7 +179,7 @@
             </p>
         </article>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
