--- a/climb-types.html
+++ b/climb-types.html
@@ -20,10 +20,10 @@
         <h1>Guide</h1>
         <h2>Hang in there, <br> we got you!</h2>
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="advice.html">Advice</a>
-            <a href="#open-help-window">Get Help</a>
-            <a href="#footer">Follow Us</a>
+            <a href="index.html" aria-label="Go to home page">Home</a>
+            <a href="advice.html" aria-label="Go to advice page">Advice</a>
+            <a href="#open-help-window" aria-label="Open popup window with a form">Get Help</a>
+            <a href="#footer" aria-label="Go to the footer of the page">Follow Us</a>
         </nav>
     </header>
 
@@ -31,7 +31,7 @@
     <aside id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
-                <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+                <a href="#" aria-label="Clickable button to close window"><i class="fa-regular fa-circle-xmark"></i></a>
                 <br>
                 <label for="full-name">Full Name</label>
                 <br>
@@ -52,14 +52,15 @@
     <!-- success message -->
     <aside id="success-message">
         <div id="got-message">
-            <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+            <a href="#" aria-label="Clickable button to close window"><i class="fa-regular fa-circle-xmark"></i></a>
             <br>
             <p>We got your question and will reply within a week.</p>
-            <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i>Back to Form</a>
+            <a href="#open-help-window" aria-label="Clickable button to go back to previous window"><i
+                    class="fa-solid fa-circle-arrow-left"></i>Back to Form</a>
         </div>
     </aside>
     <main>
-        <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
+        <a href="#" id="back-to-top" aria-label="Back to top button"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
 
         <!-- article selection -->
         <article class="main-content">
@@ -71,8 +72,10 @@
                 climbers to focus on technique and movement.
             </p>
             <p>
-                There are three main kinds of sport climbing: <a href="#single-pitch"><em>single-pitch</em></a> and
-                <a href="#multi-pitch"><em>multi-pitch</em></a> and <a href="#boulder"><em>boulder</em></a> and they
+                There are three main kinds of sport climbing: <a href="#single-pitch"
+                    aria-label="go to single-pitch topic"><em>single-pitch</em></a> and
+                <a href="#multi-pitch" aria-label="go to multi-pitch topic"><em>multi-pitch</em></a> and <a
+                    href="#boulder" aria-label="go to boulder topic"><em>boulder</em></a> and they
                 vary
                 quite
                 much. So read through it and find out which one (if not all) is for you.
@@ -139,9 +142,12 @@
         </article>
     </main>
     <footer class="footer" id="footer">
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
+            rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
+                class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://open.spotify.com/" target="_blank" aria-label="Open spotify page on a new tab"
+            rel="noopener"><i class="fa-brands fa-spotify"></i></a>
     </footer>
 
     <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
