--- a/shoes.html
+++ b/shoes.html
@@ -20,10 +20,10 @@
         <h1>Guide</h1>
         <h2>Hang in there, <br> we got you!</h2>
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="advice.html">Advice</a>
-            <a href="#open-help-window">Get Help</a>
-            <a href="#footer">Follow Us</a>
+            <a href="index.html" aria-label="Go to home page">Home</a>
+            <a href="advice.html" aria-label="Go to advice page">Advice</a>
+            <a href="#open-help-window" aria-label="Open popup window with a form">Get Help</a>
+            <a href="#footer" aria-label="Go to the footer of the page">Follow Us</a>
         </nav>
     </header>
 
@@ -31,7 +31,7 @@
     <aside id="open-help-window">
         <div id="help-window">
             <form action="#success-message" method="GET">
-                <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+                <a href="#" aria-label="Clickable button to close window"><i class="fa-regular fa-circle-xmark"></i></a>
                 <br>
                 <label for="full-name">Full Name</label>
                 <br>
@@ -52,14 +52,15 @@
     <!-- success message -->
     <aside id="success-message">
         <div id="got-message">
-            <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+            <a href="#" aria-label="Clickable button to close the window"><i class="fa-regular fa-circle-xmark"></i></a>
             <br>
             <p>We got your question and will reply within a week.</p>
-            <a href="#open-help-window"><i class="fa-solid fa-circle-arrow-left"></i>Back to Form</a>
+            <a href="#open-help-window" aria-label="Clickable button to go back to previous window"><i
+                    class="fa-solid fa-circle-arrow-left"></i>Back to Form</a>
         </div>
     </aside>
     <main>
-        <a href="#" id="back-to-top"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
+        <a href="#" id="back-to-top" aria-label="Back to top button"><i class="fa-solid fa-arrow-up"></i><br>Top</a>
 
         <!-- article -->
         <article class="main-content">
@@ -70,11 +71,13 @@
                 are not cheap, so you want to make a good decision from the beginning. Don't worry,
                 we got you covered. In this article we are going to explain the main differences
                 between the climbing shoes and guide you to an educated choice of shoes.</p>
-            <p>We are going to separate this into two sections: <a href="#shoe-feature"><em>shoe features</em></a> and
-                <a href="#shoe-shape"><em>shoe shape</em></a> as we deemed these to be the most important ones when
+            <p>We are going to separate this into two sections: <a href="#shoe-feature"
+                    aria-label="go to shoe feature topic"><em>shoe features</em></a> and
+                <a href="#shoe-shape" aria-label="Go to shoe shape topic"><em>shoe shape</em></a> as we deemed these to
+                be the most important ones when
                 starting.
                 If you are a more experienced climber or couldn't find what you needed, please write to us on the <a
-                    href="#"><em>Get Help</em></a> tab
+                    href="#" aria-label="back to the top to access get help window"><em>Get Help</em></a> tab
                 and we will guide you from your current needs.
             </p>
             <section>
@@ -154,7 +157,7 @@
                     We will list a couple of things that you have to answer based on your own
                     situation, and with the information we gave, you should be able to do choose
                     a proper shoe that will meet your needs. And if you can't, remember we are here
-                    for you in <a href="#"><em>Get Help</em></a>.
+                    for you in <a href="#" aria-label="back to the top to access get help window"><em>Get Help</em></a>.
                 </p>
                 <div>
                     <ul id="questions">
@@ -180,9 +183,12 @@
         </article>
     </main>
     <footer class="footer" id="footer">
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://x.com/" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><i class="fa-brands fa-spotify"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
+            rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
+                class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://open.spotify.com/" target="_blank" aria-label="Open spotify page on a new tab"
+            rel="noopener"><i class="fa-brands fa-spotify"></i></a>
     </footer>
 
     <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
