add and style second image on climbing styles article

--- a/advice.html
+++ b/advice.html
@@ -102,6 +102,7 @@
         <script src="https://kit.fontawesome.com/b80d18dd16.js" crossorigin="anonymous"></script>
     </main>
     <footer class="footer" id="footer">
+        <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
             rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
