--- a/climb-types.html
+++ b/climb-types.html
@@ -86,6 +86,8 @@
                     <div>
                         <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope"
                             class="article-img content-image" id="single-pitch">
+                        <img src="assets/images/single-pitch-2.webp" alt="a person climbing using a rope"
+                            class="content-image article-img img-2">
                         <p>
                             Single-pitch routes are the most common in sport climbing and are often found at climbing
                             gyms
@@ -105,6 +107,8 @@
                     <div>
                         <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope"
                             class="article-img content-image" id="multi-pitch">
+                        <img src="assets/images/multi-pitch-2.webp" alt="a person climbing using a rope"
+                            class="content-image article-img img-2">
                         <p>
                             Multi-pitch routes are a more advanced form of sport climbing, consisting of multiple
                             climbing
@@ -122,6 +126,8 @@
                     <div>
                         <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress"
                             class="article-img content-image" id="boulder">
+                        <img src="assets/images/boulder-2.webp" alt="a person climbing using a rope"
+                            class="content-image article-img img-2">
                         <p>
                             Climb with no rope and usually much lower (up to 4m high) walls/rocks. Some sport routes
                             feature short, powerful sequences known as cruxes. These sections require climbers to make
@@ -142,6 +148,7 @@
         </article>
     </main>
     <footer class="footer" id="footer">
+        <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
             rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
