--- a/shoes.html
+++ b/shoes.html
@@ -183,6 +183,7 @@
         </article>
     </main>
     <footer class="footer" id="footer">
+        <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
             rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
