--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         </section>
     </main>
     <footer class="footer" id="footer">
+        <p>Follow us on:</p>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Open instagram page on a new tab"
             rel="noopener"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://x.com/" target="_blank" aria-label="Open X page on a new tab" rel="noopener"><i
