--- a/shoes.html
+++ b/shoes.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style-desktop.css">
     <meta name="description" content="Climbing Rox. Climbing content for all kinds of climbers">
     <meta name="keywords" content="climbing, boulder, toprope, lead climbing, sports, exercise">
+    <meta name="author" content="Maria Ciceri">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icons8-mountain-16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons8-mountain-32.png">
     <link rel="icon" type="image/x-icon" href="assets/images/icons8-mountain-16.ico">
