add a new .md file to store screenshots of responsiveness and complemented TESTING.md

--- a/climb-types.html
+++ b/climb-types.html
@@ -73,9 +73,9 @@
                 climbers to focus on technique and movement.
             </p>
             <p>
-                There are three main kinds of sport climbing: <a href="#single-pitch"
+                There are three main kinds of sport climbing: <a href="#single-pitch-link"
                     aria-label="go to single-pitch topic"><em>single-pitch</em></a> and
-                <a href="#multi-pitch" aria-label="go to multi-pitch topic"><em>multi-pitch</em></a> and <a
+                <a href="#multi-pitch-link" aria-label="go to multi-pitch topic"><em>multi-pitch</em></a> and <a
                     href="#boulder" aria-label="go to boulder topic"><em>boulder</em></a> and they
                 vary
                 quite
@@ -83,7 +83,7 @@
             </p>
             <section>
                 <div class="styles">
-                    <h3 id="single-pitch">Single-pitch Climbing</h3>
+                    <h3 id="single-pitch-link">Single-pitch Climbing</h3>
                     <div>
                         <img src="assets/images/single-pitch.webp" alt="A person climbing with a rope"
                             class="article-img content-image" id="single-pitch">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="styles">
-                    <h3 id="multi-pitch">Multi-pitch Climbing</h3>
+                    <h3 id="multi-pitch-link">Multi-pitch Climbing</h3>
                     <div>
                         <img src="assets/images/multi-pitch.webp" alt="Three people climbing with a rope"
                             class="article-img content-image" id="multi-pitch">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="styles">
-                    <h3 id="boulder">Boulder</h3>
+                    <h3 id="boulder-link">Boulder</h3>
                     <div>
                         <img src="assets/images/boulder.webp" alt="A person climbing over a climbing mattress"
                             class="article-img content-image" id="boulder">
